0.92
+ Spectate mode by default, need to write /join.
+ Sessions are now passworded by default with a randomly generated key.
+ Removed default white filled canvas.
+ Fixed layer/frame creation.
+ Added GIF load support.
+ Fixed PPA load, loads and saves correctly in a more organized way now.
+ Fixed a bug in exporting images, would create junk pixels at the top.

0.91
! Almost-full cleanup of code!
+ Updated interface: as a result of cleanup, the interface was cleaned and upgraded as well.
+ New pattern tools: shading pattern, highlight pattern and cross pattern.
+ Fill preview: pressing T (default key) will show you a preview of what the fill area is.
+ Dynamic FFMPEG library support: can now export using libav dlls.
+ Added new commands: see /help for an overview.
+ Default save directory is $HOME/parupaint/
+ Better file dialog.
+ Better layer list.
+ Cursors hide correctly when hovering over them.
+ Fix fill tool crash.

0.85
+ Session log and recovery: a session log is now written while drawing to allow recovery and playback.
+ Run/play scripts: the session logs can also be replayed back for everyone else.
+ Clear canvas: default key is Ctrl+Backspace.
+ Standalone server: A non-gui version of the server is now available. (qmake -config server_release)
* Performance improvements: faster flood-fill, faster drawing, less redraws
+ Copy and paste frames
* Mac layout fixes
* < 1 brushwidth fix
* User interface improvements


0.84
+ Mac build!!
* Performance improvements: less net data to transfer and improved zoomed in view.
+ Customizable hotkeys: keys are now settable and saved.
+ Overlay parts keep visible after using them.
+ Flash when navigating layers.
* Fixed dialog issues: dialogs not being focused and black text on windows build.
+ Can save chatlog by right clicking the chat area.
* Disconnect message
+ Small message appears when switching preview modes and other similar things.
* Flood fill works faster.